code update day02

--- a/Flipcart_endToend_project/.gitignore
+++ b/Flipcart_endToend_project/.gitignore
@@ -1,2 +1,17 @@
-.Property
-.metadata
+# Eclipse / IDE
+.metadata/
+.classpath
+.project
+.settings/
+
+# Maven
+target/
+
+# Compiled files
+*.class
+
+# Properties (generated)
+target/**/*.properties
+
+# Logs
+*.log
